--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 }
 header {
     display: flex;
+    font-weight: 300;
     font-size: 56px;
     justify-content: center;
     align-items: center;
@@ -38,7 +39,7 @@ header {
     padding:0;
     max-width: 50vw;
     z-index: 999;
-    box-shadow: -10px -10px rgb(32, 32, 32);
+    box-shadow: -10px -16px rgb(71, 71, 71);
     
 }
 ::placeholder{
@@ -61,9 +62,12 @@ input, select ,textarea {
     z-index: 999;
     box-shadow: -5px -5px rgb(163, 82, 250);
 }
-
+    .add-button:hover{
+        color: rgb(0, 0, 0);
+    }
 ::placeholder {
     color:rgb(157, 67, 253);
+    
 
 }
 
