--- a/styles.css
+++ b/styles.css
@@ -5,24 +5,23 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgb(190, 129, 255),rgb(255, 255, 255));
-    font-family: 'JetBrains Mono', monospace;
+    background-color:black;
+    font-family:'JetBrains Mono', monospace;
  
     
 
 }
 header {
     display: flex;
-    font-weight: 300;
-    font-size: 56px;
+    font-size: 70px;
     justify-content: center;
     align-items: center;
-    max-width:40vw;
+    max-width:50vw;
     z-index: -1;
     height:100vh;
     transform: rotate(-90deg);
-    color:rgb(190, 129, 255);
-    border: solid 0.2rem rgb(190, 129, 255);
+    color:rgb(255, 255, 255);
+    border: solid 0.2rem rgb(69, 69, 69);
     border-radius: 2rem;
 
 }
@@ -30,7 +29,7 @@ header {
     font-size: 48px;
     text-decoration: none;
     background-color: rgb(255, 255, 255);
-    border: 2px solid rgb(0, 0, 0);
+    border: solid 0.2rem rgb(246, 237, 255);
     border-radius: 8px;
     display: flex;
     justify-content: center;
@@ -39,31 +38,32 @@ header {
     padding:0;
     max-width: 50vw;
     z-index: 999;
-    box-shadow: -10px -10px rgb(0, 0, 0);
+    box-shadow: -10px -10px rgb(174, 97, 255);
     
 }
 ::placeholder{
-    font-family:'JetBrains Mono', monospace;
+    color:rgb(222, 191, 255);
 }
 input, select ,textarea {
+    color:rgb(222, 191, 255);
     font-family:'JetBrains Mono', monospace;
 }
 .add-button {
     text-decoration: none;
     cursor: pointer;
-    background: linear-gradient(rgb(174, 97, 255),rgb(255, 255, 255));
+    background:black;
     color: white;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 24px;
     font-size: 32px;
+    padding:5px;
     display: block;
     margin: 16px;
-    font-family:'JetBrains Mono', monospace;
     z-index: 999;
     box-shadow: -5px -5px rgb(163, 82, 250);
 }
     .add-button:hover{
-        color: rgb(0, 0, 0);
+        color: rgb(163, 82, 250);
     }
     .add-button:active {
         font-size: 30px;
